# shield-data

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/data_vis/: __init__.py  utils.py
src/shield_converter/: __init__.py  __main__.py  cli.py  converter.py  models.py
tst/: conftest.py  test_converter.py  test_models.py
